--- a/farewell/index.html
+++ b/farewell/index.html
@@ -108,7 +108,7 @@
 
                         <div className="p-10 md:p-16">
                             <div className="text-center mb-12">
-                                <h3 className="text-xs font-bold tracking-[0.3em] text-slate-400 uppercase mb-4">Media Collection System</h3>
+                                <h3 className="text-xs font-bold tracking-[0.3em] text-slate-400 uppercase mb-4">Farewell Media Collection</h3>
                                 <h1 className="text-5xl md:text-6xl font-serif text-slate-900 mb-4 tracking-tight">Batch of 2026</h1>
                                 <div className="w-16 h-px bg-slate-300 mx-auto my-6"></div>
                                 <p className="text-slate-500 max-w-md mx-auto leading-relaxed text-sm md:text-base">
