--- a/farewell/index.html
+++ b/farewell/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batch of 2025-26 | Farewell</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- 1. Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
